[tool.poetry]
name = "iauditor_exporter"
version = "0.1.4"
description = ""
authors = ["Edd <edward.abrahamsen-mills@safetyculture.io>"]
packages = [
    { include = "modules", from = "iauditor_exporter"},
    { include = "exporter.py", from = "iauditor_exporter"}
]
[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.1"
unicodecsv = ">=0.14.1"
tzlocal = ">=2.0.0"
pytz = ">=2019.2"
SQLAlchemy = ">=1.3.4"
python_dateutil = ">=2.8.0"
pandas = ">=0.24.2"
numpy = ">=1.16.4"
sqlalchemy-pyodbc-mssql = ">=0.1.0"
coloredlogs = ">=10.0"
safetyculture-sdk-python-beta = ">=2.1.1"
tqdm = "^4.46.0"

[tool.poetry.scripts]
exporter = "exporter:main"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
